--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/config
+MONGO_URI=mongodb+srv://shubhangisingh:LlO8llm5WDePaj9O@retaildbcluster.tg5nq.mongodb.net/?retryWrites=true&w=majority&appName=RetailDBCluster
 PORT=3001
-EMAIL_SENDER=your-email@gmail.com
-EMAIL_PASSWORD=your-email-password
-EMAIL_RECEIVER=your-father's-email@gmail.com
+REACT_APP_API_URL=https://stock-tracker-v227.onrender.com
